--- a/style1.css
+++ b/style1.css
@@ -162,6 +162,77 @@ a:focus {
   color: #ff7241;
 }
 
+
+.service_section1 .box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  margin: 0 auto;
+  margin-top: -10px;
+  padding: 25px 25px 30px 25px;
+  -webkit-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.25);
+          box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+}
+
+.service_section1 .box.b2 {
+  margin-top: 45px;
+}
+
+.service_section1 .box .img-box {
+  width: 90px;
+  margin-bottom: 20px;
+}
+
+.service_section1 .box .img-box img {
+  width: 100%;
+  -webkit-transition: all 1s;
+  transition: all 1s;
+}
+
+.service_section1 .box .detail-box h5 {
+  font-weight: 600;
+  color: #ff7241;
+}
+
+.service_section1 .box .detail-box p {
+  margin: 0;
+}
+
+.service_section1 .btn-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 45px;
+}
+
+.service_section1 .btn-box a {
+  display: inline-block;
+  padding: 10px 45px;
+  background-color: #35140a;
+  color: #ffffff;
+  border-radius: 0px;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+  border: none;
+}
+
+.service_section1 .btn-box a:hover {
+  background-color: #3d1a0e;
+}
+
+
 .custom_nav-container .nav_search-btn {
   width: 35px;
   height: 35px;
